ajout du summary authController
